--- a/src/app/task/list/list-task.component.html
+++ b/src/app/task/list/list-task.component.html
@@ -1,1 +1,42 @@
-<p>list-task works!</p>
+<h1>Tasks</h1>
+
+<table class="table table-striped table-bordered table-hover">
+  <tbody>
+    <tr>
+    	<th>Task</th>
+      <th>Done</th>
+    	<th class="text-center">
+        <a 
+           class="btn btn-xs btn-success">
+           <span class="glyphicon glyphicon-plus" 
+             aria-hidden="true"></span> New
+        </a>
+    </th>
+    </tr>
+    <tr *ngFor="let task of tasks">
+      <td [class.success]="!task.done">
+        {{ task.name }}
+      </td>
+      <td style="width: 70px" class="text-center">
+        <input 
+          type="checkbox" [value]="task.id" [checked]="task.done">
+      </td>
+      <td class="text-center" style="width: 200px">
+        <a 
+          title="Editar" alt="Editar"
+          class="btn btn-xs btn-info">
+          <span class="glyphicon glyphicon-pencil" 
+            aria-hidden="true"></span> Edit
+        </a>
+        <a href="#" title="Remover" alt="Remover" 
+          
+          class="btn btn-xs btn-danger">
+          <span class="glyphicon glyphicon-remove" 
+            aria-hidden="true"></span> Delete
+        </a>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<p *ngIf="tasks.length==0">No task registered.</p>
