Added delete-task feature

--- a/src/app/task/list/list-task.component.html
+++ b/src/app/task/list/list-task.component.html
@@ -29,7 +29,7 @@
             aria-hidden="true"></span> Edit
         </a>
         <a href="#" title="Remover" alt="Remover" 
-          
+          (click)="delete($event, task)"
           class="btn btn-xs btn-danger">
           <span class="glyphicon glyphicon-remove" 
             aria-hidden="true"></span> Delete
