--- a/src/app/task/list/list-task.component.html
+++ b/src/app/task/list/list-task.component.html
@@ -14,7 +14,7 @@
     </th>
     </tr>
     <tr *ngFor="let task of tasks">
-      <td [class.success]="!task.done">
+      <td [class.success]="!task.done" [taskDone]="task.done">
         {{ task.name }}
       </td>
       <td style="width: 70px" class="text-center">
